scrollbar fix

--- a/web/css/colors.less
+++ b/web/css/colors.less
@@ -1,9 +1,11 @@
 /* CORE */
 
+@color-black:				0,0,0;				/* #000000 */
 @color-offblack:			16,16,16;			/* #101010 */
-@color-offwhite:			242,242,242;		/* #F2F2F2 */
 @color-graydark:			127,127,127;		/* #7F7F7F */
 @color-graylight:			232,232,232;		/* #E8E8E8 */
+@color-offwhite:			242,242,242;		/* #F2F2F2 */
+@color-white:				255,255,255;		/* #FFFFFF */
 @color-live:				182,5,5;			/* #B60505 */
 
 
